[gd_scene load_steps=3 format=2]

[ext_resource path="res://Planets/Shops/GreenShop.gd" type="Script" id=1]
[ext_resource path="res://Art/Planets/Shops/Shop2.png" type="Texture" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Shops" type="Sprite" parent="."]
position = Vector2( 200, 100 )
texture = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Display" type="ColorRect" parent="Control"]
margin_left = 14.0
margin_top = 88.0
margin_right = 172.0
margin_bottom = 171.0
color = Color( 0.462745, 0.470588, 0.537255, 0.768627 )

[node name="CreditsLabel" type="Label" parent="Control/Display"]
margin_left = 14.0
margin_top = 64.0
margin_right = 78.0
margin_bottom = 78.0
text = "CREDITS $"

[node name="CreditsLabel2" type="Label" parent="Control/Display"]
margin_left = 78.0
margin_top = 64.0
margin_right = 157.0
margin_bottom = 78.0
text = "0"

[node name="UpgradeLabel" type="Label" parent="Control/Display"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 2.0
margin_top = 3.0
margin_right = 94.0
margin_bottom = 17.0
text = "LASER RELOAD"

[node name="UpgradeLabel2" type="Label" parent="Control/Display"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 99.0
margin_top = 3.0
margin_right = 153.0
margin_bottom = 17.0
text = "0"

[node name="Exit" type="Button" parent="Control"]
margin_left = 83.0
margin_top = 26.0
margin_right = 172.0
margin_bottom = 67.0
shortcut_in_tooltip = false
text = "EXIT"

[node name="Upgrade1" type="Button" parent="Control"]
margin_left = 243.0
margin_top = 80.0
margin_right = 316.0
margin_bottom = 119.0
rect_rotation = -0.0527446
focus_neighbour_left = NodePath("../Exit")
focus_neighbour_right = NodePath("../Upgrade2")
text = "RELOAD I"

[node name="Label1" type="Label" parent="Control/Upgrade1"]
margin_left = 11.9991
margin_top = 1.01103
margin_right = 60.9991
margin_bottom = 15.011
text = "LASER"
align = 1
valign = 1

[node name="Cost1" type="Label" parent="Control/Upgrade1"]
margin_left = 15.977
margin_top = 25.0147
margin_right = 56.977
margin_bottom = 39.0147
text = "$100"

[node name="Upgrade2" type="Button" parent="Control"]
margin_left = 318.0
margin_top = 80.0
margin_right = 396.0
margin_bottom = 118.0
focus_neighbour_left = NodePath("../Upgrade1")
focus_neighbour_top = NodePath("../Exit")
text = "RELOAD II"

[node name="Label2" type="Label" parent="Control/Upgrade2"]
margin_left = 13.0
margin_top = 1.0
margin_right = 62.0
margin_bottom = 15.0
text = "LASER"
align = 1

[node name="Cost2" type="Label" parent="Control/Upgrade2"]
margin_left = 19.0
margin_top = 25.0
margin_right = 60.0
margin_bottom = 39.0
text = "$200"

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[connection signal="pressed" from="Control/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Control/Upgrade1" to="." method="_on_Upgrade1_pressed"]
[connection signal="pressed" from="Control/Upgrade2" to="." method="_on_Upgrade2_pressed"]
